# OpenCL

./: CMakeLists.txt  README.md
benchmark/: kernel.h  main.cpp
blur_image/: blur.cl  main.cpp
utils/: utils.cpp  utils.h
vector_ops/: kernel.cl  main.cpp
